[jdk9] building using source 1.5 is no longer supported